# scope

./: .gitignore  CMakeLists.txt  goals.txt  notes.txt  shadow_mapping.txt
scope/: CMakeLists.txt  canvas.c  canvas.h  colour.h  engine.c  engine.h  entities.h  frustum_culling.c  frustum_culling.h  lights.c  lights.h  main.c  meshes.c  meshes.h  models.c  models.h  render.c  render.h  render_settings.h  render_target.h  status.h  texture.c
scope/engine/: canvas.c  canvas.h  engine.c  engine.h  globals.h  lights.c  lights.h  models.c  models.h  resources.h  scene.c  scene.h  texture.h  window.c  window.h
scope/engine/common/: colour.h  status.h
scope/engine/maths/: matrix4.c  matrix4.h  plane.c  utils.h  vector2.h  vector3.h  vector4.h
scope/engine/renderer/: camera.c  frustum_culling.c  frustum_culling.h  render.c  render.h  render_buffers.h  render_settings.h  render_target.h  renderer.c  renderer.h  texture.h
scope/engine/ui/: font.c
scope/engine/utils/: common.h  logger.h  memory_utils.c  str_utils.c  timer.h
scope/maths/: matrix4.c  matrix4.h  plane.h  utils.h  vector3.h  vector4.h
scope/ui/: font.c  font.h  text.c  text.h
scope/utils/: common.h  logger.h  memory_utils.c  memory_utils.h  timer.h
